Fix team spacing issues

--- a/frontend/src/Team.css
+++ b/frontend/src/Team.css
@@ -8,5 +8,6 @@
 }
 
 .team {
-    height: 30%;
+    width: 100%;
+    height: auto;
 }
